Fix jump on icon load in settings view (web)

--- a/web/src/views/Settings/Settings.css
+++ b/web/src/views/Settings/Settings.css
@@ -64,6 +64,7 @@
 }
 
 #settings > div > a > i {
+	height: 0;
 	margin-left: 4px;
 	color: var(--color-fg-light);
 	font-size: 18px;
